package com.directi.training.lsp.exercise_refactored;

public interface IDuck {
    void quack();
    void swim();
}
